css/index.css
/* ... */
.tk-fatfrank { font-family: "fatfrank",sans-serif; }

* {
  box-sizing: border-box;
}

body {
	overflow-x: hidden;
    overflow-y: scroll;
	padding: 0;
	margin: 0;
	font-family: 'Poppins', sans-serif, normal; 
  font-family: 'fatfrank', sans-serif;
  font-weight: 400;
  font-style: normal;
  font-display: swap; 
	
}
/* 
html, body {
  width: 100%; 
  height: 100%; 
  margin: 0; 
}

canvas {
  width: 100vw; 
  height: 100vh; 
  display: block;
} */

h1 {font-family: 'fatfrank', sans-serif, bold; font-size: 2rem; }
h2 {font-family: 'Poppins', sans-serif, normal; font-size: 1.33rem; }
h3 {font-family: 'Poppins', sans-serif, normal; font-size: 1rem; font-weight: 400;}
h5 {font-family: 'Poppins', sans-serif, thin; font-size: 0.66rem; font-weight: 300; padding-left: 10px; padding-right: 10px;}
h6 {font-family: 'Poppins', sans-serif, normal; font-weight: 300; font-size: 0.66rem; }
p {font-family: 'Poppins', sans-serif, normal; font-size: 1rem; line-height: 1.25rem; letter-spacing: 0.2px;}

em {font-family: 'Poppins', sans-serif, italic;}
b {font-family: 'Poppins', sans-serif, 400;}
a {color: white; text-decoration: none;}
a:hover {color: #9aa4bd;}


#viewport {width: 100%; height: 100%; position: fixed;}

.page-wrapper {padding: 0px; position: absolute; left: 0; top: 0; width: 100%; height: 4000vh;}
#container {height: 4000vh; position: fixed;}
.downArrow{z-index: 12; bottom: 1%; right: 50%; height: 3%; position: fixed;}

.social_banner {width: 15%; max-width: 175px; left: 0px; position: absolute; bottom: 0px; padding-bottom: 9%; z-index: 20;}
 #social_banners {display: none;} 
.social_banner:hover {transform: rotate(5deg); cursor: pointer;}
.social_banner_small {position: absolute; width: 12%; max-width: 125px; left: 0px; padding-bottom: 10%; bottom: 5%;}
.social_banner_small:hover {transform: rotate(5deg); cursor: pointer; }


.shortcut_banner {width: 15%; max-width: 175px; right: -2px; top: 5%; position: absolute;}
.shortcut_banner_small {width: 12%; max-width: 125px; position: fixed; right: 0; top: 0;}
#shortcut_banners {display: none;}
.shortcut_banner_small:hover {transform: rotate(5deg); cursor: pointer;}
.shortcut_banner:hover {transform: rotate(5deg); cursor: pointer;}

.headerOverview {
	background-color: #2E345B;
	background-image: url("../src/splash+contexts/stars_wallpaper.svg");
	background-size: contain;
	background-repeat: repeat-y;
    height: 100%;
    width: 100%;
	opacity: 1;
	display: flex;
	justify-content: center;
    align-items: center;
	position: fixed;
	z-index: 20;

}

/* max-width: 215px */
.logo { width: 25%; max-width: 225px; animation: rotateStars 15s infinite; position: absolute; z-index: 3; padding-right: 10px;}

.entry_moto {max-width: 650px; width: 90%; animation: rotateStars 15s infinite;  position: absolute;}
#spinnyBox { display: flex; justify-content: center; align-items: center; padding-top: 50vh;} 
.spinny {position: fixed; z-index: 7; max-width: 40px; opacity: 0;}
.moto { position: fixed; opacity: 0; top: 0; width: 100%; align-self: center; z-index: 10;}


.login {
	 width: 100%; 
	 height: 100%;
	 position: fixed;
	 top: 0;
	 display: flex;
	justify-content: center;
	align-items: center;
	
	
}

#profile_wrapper {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 100%; 
	display: flex;
	justify-content: center;
	align-items: center;
	
}

.profile {
	width: 0%;
	max-width: 300px;
	position: absolute;
	padding-top: 25px;
	opacity: 1;
	z-index: 10;
}

.profile_description {
	width: 50%;
	opacity:1;
	padding-top: 80px;
	

}





#splash_pages {display: flex; justify-content: center; align-items: center; position: fixed; height: 100%; width: 100%; content: contain; }
.splash_page_wrapper {display: flex; justify-content: center; align-items: center; max-height: 80%;}
#splash_context_text {width: 100%;  max-height: 75%; position: absolute;}
.splash_img {width: 85%; max-height: 45%; margin-top: 2%; opacity: 1; position: absolute;}
.loading_scroller { border: 1px solid #2E345B; opacity: 50%; left: 20%; bottom: 20%; z-index: 200; background: #ededed; height: 10px; max-width: 68%; width: 0%; position: absolute;}


.desktop {background-image: url("../src/desktop_items/wallpaper.svg"); background-size: cover; background-color: #47578a; background-repeat: no-repeat; top: 50px;  width: 100%; height: 100%; position: fixed; z-index: 0;}
.desktop_container img {width: 7%;  position: fixed; min-width: 70px; max-width: 110px; right: 25px; top: 75px; }
.desktop_container img:hover {transform: rotate(5deg);}
.desktop_icons button{border: none; box-shadow: none; outline: none; }

.desktopToolbar {width: 100%; background: #2c2c2c; height: 50px; top: 0; color: #f4f4f4; z-index: 100000; opacity: 0; }
.desktop_toolbar_left {opacity: 0;}
.toolbar_hide, .toolbar_design_elixir {font-family: 'Poppins', sans-serif, normal; font-size: 1rem; line-height: 3rem; padding-right: 10px;}

.dock_container {display: flex; justify-content: center; align-items: center; z-index: 100; } 
.dock {bottom: 0; height: 100px; background-color: #2e345b; position: fixed; z-index: 200;}
.dock img {height: 100px; padding: 15px; opacity: 1;}
.dock img:hover {transform: rotate(5deg);}

.tooltip {position: relative; display: inline-block;}
.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #c7ccde;
  color: #000;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -60px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip .tooltiptext::after {content: ""; position: absolute; top: 100%; left: 50%;}
.tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}

button {background-color: #00000000; border: none; outline: none;}
button:hover {cursor: pointer;}

.desktop_toolbar {width: 100%;  background-color: #2c2c2c; height: 50px; color: white; display: inline-block; overflow: hidden; position: fixed;}
.desktop_toolbar p {display: inline-block; padding-left: 15px;}
/* ... */

